# MsRdpEx

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DVC_PLUGIN_EXTRACTOR.md  README.md  detours.ps1
.github/: CODEOWNERS
.github/workflows/: build-package.yml  native-package.yml  nuget-package.yml
PowerShell/: ConnectRdpSession.cs  Devolutions.MsRdpEx.PowerShell.csproj  RdpContext.cs  RdpMain.cs  RdpView.cs  StartRdpClient.cs  StartRdpProcess.cs  packages.lock.json
channels/: CMakeLists.txt  DvcServer.cpp
channels/rdp_dvc_server/: Cargo.toml
channels/rdp_dvc_server/src/: main.rs
com/: .gitignore  README.md  mstscax.h  mstscax.idl  mstscax.tlh  mstscax.tli  mstscax_i.c
core/: ArrayList.c  CMakeLists.txt  File.c  HashTable.c  Log.c  NameResolver.c  Paths.c  RdpFile.c  RdpSession.c  String.c
dependencies/detours/: README.md  git-commit.txt
dependencies/detours/lib/arm64/Debug/: detours.lib
dependencies/detours/lib/arm64/Release/: detours.lib
dependencies/detours/lib/x64/Debug/: detours.lib
dependencies/detours/lib/x64/Release/: detours.lib
dependencies/detours/lib/x86/Debug/: detours.lib
dependencies/detours/lib/x86/Release/: detours.lib
dll/: ApiExports.c  ApiHooks.c  ApiHooks.cpp  ArrayList.c  AxDll.c  AxDll.cpp  Bitmap.c  CMakeLists.txt  ComHelpers.h  Detours.cpp  DpiHelper.cpp  DpiHelper.h  DvcPluginExtractor.cpp  Environment.c  File.c  Hooks.c  KdcProxy.cpp  KdcProxy.h  KeyMaps.cpp  Log.c  Memory.c  MsRdpClient.cpp  MsRdpClient.h  MsRdpEx.c  MsRdpEx.cpp  MsRdpEx.def  MsRdpEx.h  NameResolver.c  NamedPipe.c  OutputMirror.c  OutputMirror.h  Paths.c  Pcap.cpp  Process.c  Process.cpp  ProcessLauncher.c  RdpCoreApi.cpp  RdpDvcClient.cpp  RdpDvcClient.h  RdpFile.c  (+17 more)
dll/AxHost/: RdpAxHostWnd.cpp  RdpAxHostWnd.h  RdpComBase.h  RdpEventSink.cpp  RdpOleSite.cpp  RdpWinMain.cpp  RdpWinMain.h
dotnet/: .gitignore  AxMSTSCLib.cs  CMakeLists.txt  Directory.Build.props.in  MainDlg.Designer.cs  MainDlg.cs  MsRdpEx_App.csproj  Program.cs  RdpAxHost.cs  RdpLoader.cs  RdpView.Designer.cs  RdpView.cs  RdpView.resx  common.build.pre.props
dotnet/AxInterop.MSTSCLib/: AxInterop.MSTSCLib.csproj  AxMSTSCLib.cs  MSTSCLib-x64.idl  MSTSCLib-x86.idl  MSTSCLib.cs  MSTSCLib.idl  RdpAxHost.cs
dotnet/AxInterop.MSTSCLib/Binding/: AdvancedSettings.cs  Camera.cs  Client.cs  Clipboard.cs  Debug.cs  Device.cs  Drive.cs  ExtendedSettings.cs  NonScriptableClient.cs  RedirectionInfo.cs  RemoteDesktopClient.cs  RemoteProgram.cs  SecuredSettings.cs  Shell.cs  TransportSettings.cs
dotnet/AxInterop.MSTSCLib/Compat/: ClientControl.cs  RemoteDesktopClient.cs
dotnet/AxInterop.MSTSCLib/Interop/: BinaryString.cs  IDispatch.cs  Variant.cs
dotnet/AxMSTSCLib/: AxMSTSCLib.csproj
dotnet/AxMSTSCLib/Properties/: AssemblyInfo.cs
dotnet/Devolutions.MsRdpEx/: Bindings.cs  Devolutions.MsRdpEx.csproj  Devolutions.MsRdpEx.targets  LoadBalanceInfo.cs  MarshalHelpers.cs  RdpCoreApi.cs  RdpInstance.cs  RdpProcess.cs
dotnet/Devolutions.MsRdpEx/output/: Devolutions.MsRdpEx.2022.1.18.nupkg
dotnet/MsRdpEx_App/: Bindings.cs  DvcClientLib.cs  DvcDialog.Designer.cs  DvcDialog.cs  ExecSessionDlg.Designer.cs  ExecSessionDlg.cs  MainDlg.Designer.cs  MainDlg.cs  MsRdpEx_App.csproj  NowProtoPipeTransport.cs  Program.cs  RdpChannel.cs  RdpManager.cs  RdpView.cs
dotnet/MsRdpEx_Test/: BinaryString.cs  Compatibility.cs  MsRdpEx_Test.csproj  Utilities.cs
dotnet/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
dvc-client-rs/: Cargo.toml
dvc-client-rs/dvc-client/: Cargo.toml
dvc-client-rs/dvc-client/src/: client_message.rs  ffi.rs  lib.rs
exe/: CMakeLists.txt  MsRdpEx.c  MsRdpEx.h
exe/AxHost/: CMakeLists.txt  RdpAxHost.cpp  RdpAxHost.h  RdpAxHostWnd.cpp  RdpComBase.h  RdpEventSink.h  RdpOleSite.h
exe/MsRdpAxHost/: CMakeLists.txt  DpiHelper.cpp  DpiHelper.h  MsRdpAxHost.cpp  MsRdpAxHost.rc
exe/msrdc/: CMakeLists.txt  msrdc.rc
exe/msrdcex/: CMakeLists.txt  msrdcex.c  msrdcex.cpp  msrdcex.rc
exe/mstsc/: CMakeLists.txt  mstsc.rc
exe/mstscex/: CMakeLists.txt  mstscex.c  mstscex.cpp  mstscex.rc
exe/vmconnectex/: CMakeLists.txt  vmconnectex.cpp  vmconnectex.rc
include/MsRdpEx/: ArrayList.h  Detours.h  DvcPluginExtractor.h  Environment.h  HashTable.h  KeyMaps.h  Memory.h  MsRdpEx.h  NameResolver.h  NamedPipe.h  OutputMirror.h  Pcap.h  Process.h  ProcessLauncher.h  RdpCoreApi.h  RdpFile.h  RdpInstance.h  RdpProcess.h  RdpSession.h  RdpSettings.h  RecordingManifest.h  Sspi.h  Stopwatch.h  Stream.h  VideoRecorder.h
installer/: Folders.wxs  MsRdpEx.sln  MsRdpEx.wixproj  MsRdpEx.wxs  Package.en-us.wxl  Package.wxs  Variables.wxi
msrdpex/: CMakeLists.txt  MsRdpEx.c  MsRdpEx.h  msrdpex.def
scripts/: SetAssemblyTargetFramework.ps1  detours-all.ps1  detours.ps1
utils/: CMakeLists.txt  File.c  MreFile.c  MreUtils.h  Paths.c  String.c  Utils.h
