cmake_minimum_required(VERSION 3.0)

project(msrdpex C CXX)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include(CMakePackageConfigHelpers)

file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION" VERSION_STRINGS)
list(GET VERSION_STRINGS 0 VERSION_STRING)

string(REGEX REPLACE "([0-9]+).[0-9]+.[0-9]+" "\\1" MSRDPEX_VERSION_MAJOR ${VERSION_STRING})
string(REGEX REPLACE "[0-9]+.([0-9]+).[0-9]+" "\\1" MSRDPEX_VERSION_MINOR ${VERSION_STRING})
string(REGEX REPLACE "[0-9]+.[0-9]+.([0-9]+)" "\\1" MSRDPEX_VERSION_PATCH ${VERSION_STRING})
set(MSRDPEX_VERSION "${MSRDPEX_VERSION_MAJOR}.${MSRDPEX_VERSION_MINOR}.${MSRDPEX_VERSION_PATCH}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(MSVC)
	include(MSVCRuntime)

	if(NOT DEFINED MSVC_RUNTIME)
		set(MSVC_RUNTIME "static")
	endif()

	configure_msvc_runtime()
endif()

if(WIN32)
	set(C_FLAGS "")
	set(C_FLAGS "${C_FLAGS} -D_UNICODE")
	set(C_FLAGS "${C_FLAGS} -D_CRT_SECURE_NO_WARNINGS")
	set(C_FLAGS "${C_FLAGS} -DWIN32_LEAN_AND_MEAN")
	set(C_FLAGS "${C_FLAGS} -D_WINSOCK_DEPRECATED_NO_WARNINGS")
	set(C_FLAGS "${C_FLAGS} -DWINVER=0x0602 -D_WIN32_WINNT=0x0602")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${C_FLAGS}")
endif()

set(DEPENDENCIES_DIR "${CMAKE_SOURCE_DIR}/dependencies")
set(DETOURS_ROOT_DIR "${DEPENDENCIES_DIR}/detours")

include_directories("${DETOURS_ROOT_DIR}/include")

message(STATUS "DETOURS_ROOT_DIR: ${DETOURS_ROOT_DIR}")

add_library(detours STATIC IMPORTED)

if(CMAKE_GENERATOR_PLATFORM MATCHES "ARM64")
    set(MSVC_PLATFORM_TARGET "arm64")
elseif(CMAKE_GENERATOR_PLATFORM MATCHES "Win32")
    set(MSVC_PLATFORM_TARGET "x86")
else()
    set(MSVC_PLATFORM_TARGET "x64")
endif()

message(STATUS "MSVC_PLATFORM_TARGET: ${MSVC_PLATFORM_TARGET}")

set_property(TARGET detours PROPERTY
    IMPORTED_LOCATION "${DETOURS_ROOT_DIR}/lib/${MSVC_PLATFORM_TARGET}/Release/detours.lib")
set_property(TARGET detours PROPERTY
    IMPORTED_LOCATION_DEBUG "${DETOURS_ROOT_DIR}/lib/${MSVC_PLATFORM_TARGET}/Debug/detours.lib")

add_subdirectory(dll)
add_subdirectory(exe)
