[package]
name = "dvc-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
now-proto-pdu = { version = "0.1", git = "https://github.com/Devolutions/IronRDP", rev = "fa236e3480d61eebeffc25a8a3c4151841fe9f94" }
ironrdp = { version = "0.5", git = "https://github.com/Devolutions/IronRDP", rev = "fa236e3480d61eebeffc25a8a3c4151841fe9f94", features = ["core", "pdu"]}